--- a/index-go.html
+++ b/index-go.html
@@ -10,7 +10,7 @@
     <div class="center-on-page">
   
         <div class="pokeball">
-          <a href="/index.html"><div class="pokeball__button"></div></a>
+          <a href="/assets/html/index.html"><div class="pokeball__button"></div></a>
         </div>
         
       </div>
